force-app/main/default/objects/Deal_Attribution_Rule__mdt/Deal_Attribution_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Deal Attribution Rule</label>
    <pluralLabel>Deal Attribution Rules</pluralLabel>
</CustomObject>