force-app/main/default/objects/Deal_Attribution_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this policy is used to classify newly submitted
  deals. Only the first active record found is used.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>