force-app/main/default/objects/Deal_Attribution_Rule__mdt/fields/Default_Attribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Attribution_Type__c</fullName>
    <description>Fallback classification used when no active policy exists,
  or the Opportunity's creation date can't be determined.</description>
    <label>Default Attribution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted
      >false</sorted><value><fullName>Partner-Sourced</fullName><default
        >true</default><label>Partner-Sourced</label></value><value><fullName
        >Co-Sell</fullName><default>false</default><label
        >Co-Sell</label></value></valueSetDefinition></valueSet>
</CustomField>