force-app/main/default/objects/Deal_Attribution_Rule__mdt/fields/Opportunity_Age_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Age_Threshold_Days__c</fullName>
    <description>If the underlying Opportunity was created more than this
  many days before the deal registration was submitted, the deal is
  classified Co-Sell (pre-existing vendor pipeline the partner joined);
  otherwise Partner-Sourced. Set to 0 to treat any pre-existing Opportunity
  as Co-Sell.</description>
    <label>Opportunity Age Threshold Days</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>